styles.css
/* ============================
   Styles for the whole website
   ============================ */

/* ===========================
   Override default HTML style
   =========================== */
body {
    font-family: "Lexend", sans-serif;
    font-optical-sizing: auto;
    font-weight: 350;
    font-style: normal;
    min-height: 100vh;
    background: linear-gradient(135deg, #18093f, #33093f);
    color: #d8d8d8;
}

header {
    padding-inline: 2rem;
}

main {
    padding-inline: 2rem;
}

/* link style */
a {
    color: #4ade80;
    text-decoration: underline;
}

a:hover {
    text-decoration: underline double;
}

footer {
    padding-block: 2rem;
    border-top: 1px solid rgba(255,255,255,0.1);
    background: rgba(0,0,0,0.06);
}

/* =================
    Nav style
   ================= */
.nav-link {
    border-radius: 8px;
    font-size: 1rem;
    color: #d8d8d8;
    background: rgba(255,255,255,0.06);
    border: 1px solid rgba(255,255,255,0.1);
    transition: 0.2s;
    cursor: pointer;
}

.nav-link:hover {
    background: rgba(255,255,255,0.12);
    color: #e6f1f2;
    text-decoration: none;
}

.current {
    font-weight: 700;
}

.navbar {
    padding-top: 0.5rem;
    border-bottom: 1px solid rgba(255,255,255,0.1);
}

.navbar-nav {
    gap: 10px;
}

/* =================
   Content styling
   ================= */
.portfolio-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 2rem;
    padding-bottom: 2rem;
}

/* Box style */
.box {
    background: rgba(255,255,255,0.05);
    border-radius: 16px;
    backdrop-filter: blur(14px);
    box-shadow: 0 8px 10px rgba(0,0,0,0.3);
    transition: 0.25s;
    font-size: 1rem;
    padding: 20px 24px;
    overflow: visible;
}

.box:hover {
    transform: scale3d(1.01, 1.01, 1);
}

/* for centering images */
.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
}

/* restrict width of about page */
.thin {
    max-width: 60rem;
}

/* ==============
   Font styles
   ============== */
.barlow-black-italic-big {
    font-family: "Barlow", sans-serif;
    font-weight: 900;
    font-style: normal;
    font-size: 5rem;
}

.barlow-black-italic-small {
    font-family: "Barlow", sans-serif;
    font-weight: 900;
    font-style: normal;
    font-size: 3rem;
}

.italic {
    font-style: italic;
}

